--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,8 @@
   "name": "EBoard",
   "private": true,
   "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.0.0-rc.1"
+    "ionic": "driftyco/ionic-bower#1.0.0-rc.1",
+    "platform": "~1.3.0"
   },
   "version": "0.0.0",
   "authors": [
